--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+     "start": "node ./app"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -13,6 +13,11 @@
     "express": "~4.13.1",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
-    "mysql": "~2.8.0"
+    "mysql": "~2.8.0",
+    "bcrypt-nodejs": "0.0.3",
+    "connect-flash": "^0.1.1",
+    "express-session": "^1.11.3",
+    "passport": "^0.2.2",
+    "passport-local": "^1.0.0"
   }
 }
