--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "connect-flash": "^0.1.1",
     "express-session": "^1.11.3",
     "passport": "^0.2.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "formidable" : "latest"
   }
 }
