--- a/package.json
+++ b/package.json
@@ -3,22 +3,23 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-     "start": "node ./app"
+    "start": "node ./app"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.13.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
-    "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
-    "mysql": "~2.8.0",
-    "bcrypt-nodejs": "0.0.3",
-    "connect-flash": "^0.1.1",
     "express-session": "^1.11.3",
+    "formidable": "latest",
+    "moment": "^2.10.6",
+    "morgan": "~1.6.1",
+    "mysql": "~2.8.0",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
-    "formidable" : "latest"
+    "serve-favicon": "~2.3.0"
   }
 }
