--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.10.6",
     "morgan": "~1.6.1",
     "mysql": "~2.8.0",
+    "node-xlsx": "^0.6.0",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0"
